# CrawlerBox

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  release.yml
crawlerbox/: __main__.py  _version.py  additional_info.py  cisco_investigate.py  crawl_page.py  personalized_config.py  phishdb_layer.py  phishparser.py
package/: __main__.py  crawl_page.py  phishdb_layer.py  phishparser.py  shodan_enrichment.py
