[metadata]
name = CrawlerBox
description = An analysis pipeline for parsing and crawling evasive phishing emails
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AmadeusITGroup/CrawlerBox
author = Elyssa Boulila
author_email = elyssa.boulila@amadeus.com
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.9
setup_requires =
    setuptools_scm
install_requires =
    beautifulsoup4
    fitz
    sqlalchemy 
    psycopg2-binary 
    python-whois
    polyfile
    requests
    pikepdf
    python-dateutil
    numpy
    opencv-python
    pyppeteer
    tldextract
    shodan
    pillow
    ImageHash
    urllib3
    termcolor
    pytesseract
    python-magic-bin == 0.4.14
    pyzbar
    qreader
    datefinder

[options.entry_points]
console_scripts =
    run_crawlerbox = package.__main__:main
